Fix getFirst() -> get(0) after Java 21 refactor